<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:orderInCategory="3"
            android:title="@string/filter"
            android:icon="@drawable/ic_filter"
            app:showAsAction="always">
        <menu>
            <item
                    android:id="@+id/action_filter_upcoming"
                    android:icon="@drawable/ic_filter"
                    android:title="@string/upcoming_only"
                    android:checkable="true"
                    app:iconTint="@color/colorPrimary"
                    app:showAsAction="always"/>
        </menu>
    </item>

    <item
            android:orderInCategory="2"
            android:title="Sort"
            android:icon="@drawable/ic_sort"
            app:showAsAction="always">
        <menu>
            <item
                    android:id="@+id/action_sort_name"
                    android:icon="@drawable/ic_sort"
                    android:title="@string/sort_by_name"
                    app:iconTint="@color/colorPrimary"
                    app:showAsAction="always"/>
            <item
                    android:id="@+id/action_sort_date"
                    android:icon="@drawable/ic_sort"
                    android:title="@string/sort_by_date"
                    app:iconTint="@color/colorPrimary"
                    app:showAsAction="always"/>
        </menu>
    </item>

    <item
            android:orderInCategory="1"
            android:title="@string/order"
            android:icon="@drawable/ic_order"
            app:showAsAction="always">
        <menu>
            <item
                    android:id="@+id/action_order_ascending"
                    android:icon="@drawable/ic_order"
                    android:title="@string/order_ascending"
                    app:iconTint="@color/colorPrimary"
                    app:showAsAction="always"/>
            <item
                    android:id="@+id/action_order_descending"
                    android:icon="@drawable/ic_order"
                    android:title="@string/order_descending"
                    app:iconTint="@color/colorPrimary"
                    app:showAsAction="always"/>
        </menu>
    </item>


</menu>