<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.RocketDetailsFragment">

    <ProgressBar
            android:id="@+id/rocketProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    <android.support.constraint.ConstraintLayout
            android:id="@+id/rocketLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible">

        <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/launchTitleSize"
                android:text="falcon1"
                android:layout_margin="@dimen/defaultMargin"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
                android:id="@+id/activeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/launchTitleSize"
                android:text="@string/active"
                android:layout_margin="@dimen/defaultMargin"
                app:layout_constraintTop_toBottomOf="@id/nameTextView"
                app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
                android:id="@+id/stagesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/launchTitleSize"
                android:text="@string/stages"
                android:layout_margin="@dimen/defaultMargin"
                app:layout_constraintTop_toBottomOf="@id/activeTextView"
                app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
                android:id="@+id/costTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/launchTitleSize"
                android:text="@string/cost_per_launch"
                android:layout_margin="@dimen/defaultMargin"
                app:layout_constraintTop_toBottomOf="@id/stagesTextView"
                app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/launchTitleSize"
                android:text="Description"
                android:layout_margin="@dimen/defaultMargin"
                app:layout_constraintTop_toBottomOf="@id/costTextView"
                app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
                android:id="@+id/wikiTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/launchTitleSize"
                android:text="Wiki URL"
                android:layout_margin="@dimen/defaultMargin"
                android:autoLink="web"
                app:layout_constraintTop_toBottomOf="@id/descriptionTextView"
                app:layout_constraintLeft_toLeftOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>